# Vehicle-Management-Database

./: .gitignore  CMakeLists.txt  README.md
include/: Admin.h  AuthenticationManager.h  Car.h  Customer.h  DatabaseHandler.h  Dealership.h  Employee.h  Human.h  Motorbike.h  UtilityFunctions.h  Vehicle.h
src/: Admin.cpp  AuthenticationManager.cpp  Car.cpp  Customer.cpp  DatabaseHandler.cpp  Dealership.cpp  Employee.cpp  Motorbike.cpp  UtilityFunctions.cpp  Vehicle.cpp  main.cpp
